// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`multi-shell whitespace escaping [zsh] escaped space: cmd dir\\ name 1`] = `
[
  {
    "complete": true,
    "isOption": false,
    "token": "cmd",
    "tokenLength": 3,
  },
  {
    "complete": false,
    "isOption": false,
    "token": "dir name",
    "tokenLength": 9,
  },
]
`;

exports[`parseCommand [zsh]     1`] = `[]`;

exports[`parseCommand [zsh]  1`] = `[]`;

exports[`parseCommand [zsh] \`cmd1\` 1`] = `
[
  {
    "complete": false,
    "isOption": false,
    "isQuoted": true,
    "token": "cmd1",
    "tokenLength": 6,
  },
]
`;

exports[`parseCommand [zsh] cmd	arg 1`] = `
[
  {
    "complete": true,
    "isOption": false,
    "token": "cmd",
    "tokenLength": 3,
  },
  {
    "complete": false,
    "isOption": false,
    "token": "arg",
    "tokenLength": 3,
  },
]
`;

exports[`parseCommand [zsh] cmd    1`] = `
[
  {
    "complete": true,
    "isOption": false,
    "token": "cmd",
    "tokenLength": 3,
  },
]
`;

exports[`parseCommand [zsh] cmd  1`] = `
[
  {
    "complete": true,
    "isOption": false,
    "token": "cmd",
    "tokenLength": 3,
  },
]
`;

exports[`parseCommand [zsh] cmd ""  1`] = `
[
  {
    "complete": true,
    "isOption": false,
    "token": "cmd",
    "tokenLength": 3,
  },
  {
    "complete": true,
    "isOption": false,
    "isQuoted": true,
    "token": "",
    "tokenLength": 2,
  },
]
`;

exports[`parseCommand [zsh] cmd "a"b "c"d 1`] = `
[
  {
    "complete": true,
    "isOption": false,
    "token": "cmd",
    "tokenLength": 3,
  },
  {
    "complete": true,
    "isOption": false,
    "isQuoteContinued": true,
    "isQuoted": true,
    "token": "ab",
    "tokenLength": 4,
  },
  {
    "complete": false,
    "isOption": false,
    "isQuoteContinued": true,
    "isQuoted": true,
    "token": "cd",
    "tokenLength": 4,
  },
]
`;

exports[`parseCommand [zsh] cmd "incomplete 1`] = `
[
  {
    "complete": true,
    "isOption": false,
    "token": "cmd",
    "tokenLength": 3,
  },
  {
    "complete": false,
    "isOption": false,
    "isQuoted": true,
    "token": "incomplete",
    "tokenLength": 11,
  },
]
`;

exports[`parseCommand [zsh] cmd "it's"  1`] = `
[
  {
    "complete": true,
    "isOption": false,
    "token": "cmd",
    "tokenLength": 3,
  },
  {
    "complete": true,
    "isOption": false,
    "isQuoted": true,
    "token": "it's",
    "tokenLength": 6,
  },
]
`;

exports[`parseCommand [zsh] cmd "value"  1`] = `
[
  {
    "complete": true,
    "isOption": false,
    "token": "cmd",
    "tokenLength": 3,
  },
  {
    "complete": true,
    "isOption": false,
    "isQuoted": true,
    "token": "value",
    "tokenLength": 7,
  },
]
`;

exports[`parseCommand [zsh] cmd "value'  1`] = `
[
  {
    "complete": true,
    "isOption": false,
    "token": "cmd",
    "tokenLength": 3,
  },
  {
    "complete": false,
    "isOption": false,
    "isQuoted": true,
    "token": "value' ",
    "tokenLength": 8,
  },
]
`;

exports[`parseCommand [zsh] cmd "value'\\"\\""  1`] = `
[
  {
    "complete": true,
    "isOption": false,
    "token": "cmd",
    "tokenLength": 3,
  },
  {
    "complete": true,
    "isOption": false,
    "isQuoted": true,
    "token": "value'\\"\\"",
    "tokenLength": 12,
  },
]
`;

exports[`parseCommand [zsh] cmd ''  1`] = `
[
  {
    "complete": true,
    "isOption": false,
    "token": "cmd",
    "tokenLength": 3,
  },
  {
    "complete": true,
    "isOption": false,
    "isQuoted": true,
    "token": "",
    "tokenLength": 2,
  },
]
`;

exports[`parseCommand [zsh] cmd 'hello' "world"  1`] = `
[
  {
    "complete": true,
    "isOption": false,
    "token": "cmd",
    "tokenLength": 3,
  },
  {
    "complete": true,
    "isOption": false,
    "isQuoted": true,
    "token": "hello",
    "tokenLength": 7,
  },
  {
    "complete": true,
    "isOption": false,
    "isQuoted": true,
    "token": "world",
    "tokenLength": 7,
  },
]
`;

exports[`parseCommand [zsh] cmd 'incomplete 1`] = `
[
  {
    "complete": true,
    "isOption": false,
    "token": "cmd",
    "tokenLength": 3,
  },
  {
    "complete": false,
    "isOption": false,
    "isQuoted": true,
    "token": "incomplete",
    "tokenLength": 11,
  },
]
`;

exports[`parseCommand [zsh] cmd 'value'  1`] = `
[
  {
    "complete": true,
    "isOption": false,
    "token": "cmd",
    "tokenLength": 3,
  },
  {
    "complete": true,
    "isOption": false,
    "isQuoted": true,
    "token": "value",
    "tokenLength": 7,
  },
]
`;

exports[`parseCommand [zsh] cmd --flag value 1`] = `
[
  {
    "complete": true,
    "isOption": false,
    "token": "cmd",
    "tokenLength": 3,
  },
  {
    "complete": true,
    "isOption": true,
    "token": "--flag",
    "tokenLength": 6,
  },
  {
    "complete": false,
    "isOption": false,
    "token": "value",
    "tokenLength": 5,
  },
]
`;

exports[`parseCommand [zsh] cmd --flag= 1`] = `
[
  {
    "complete": true,
    "isOption": false,
    "token": "cmd",
    "tokenLength": 3,
  },
  {
    "complete": true,
    "isOption": true,
    "token": "--flag",
    "tokenLength": 6,
  },
]
`;

exports[`parseCommand [zsh] cmd --flag="" 1`] = `
[
  {
    "complete": true,
    "isOption": false,
    "token": "cmd",
    "tokenLength": 3,
  },
  {
    "complete": true,
    "isOption": true,
    "token": "--flag",
    "tokenLength": 6,
  },
  {
    "complete": false,
    "isOption": false,
    "isQuoted": true,
    "token": "",
    "tokenLength": 2,
  },
]
`;

exports[`parseCommand [zsh] cmd --flag="value"  1`] = `
[
  {
    "complete": true,
    "isOption": false,
    "token": "cmd",
    "tokenLength": 3,
  },
  {
    "complete": true,
    "isOption": true,
    "token": "--flag",
    "tokenLength": 6,
  },
  {
    "complete": true,
    "isOption": false,
    "isQuoted": true,
    "token": "value",
    "tokenLength": 7,
  },
]
`;

exports[`parseCommand [zsh] cmd --flag='' 1`] = `
[
  {
    "complete": true,
    "isOption": false,
    "token": "cmd",
    "tokenLength": 3,
  },
  {
    "complete": true,
    "isOption": true,
    "token": "--flag",
    "tokenLength": 6,
  },
  {
    "complete": false,
    "isOption": false,
    "isQuoted": true,
    "token": "",
    "tokenLength": 2,
  },
]
`;

exports[`parseCommand [zsh] cmd --flag='value'  1`] = `
[
  {
    "complete": true,
    "isOption": false,
    "token": "cmd",
    "tokenLength": 3,
  },
  {
    "complete": true,
    "isOption": true,
    "token": "--flag",
    "tokenLength": 6,
  },
  {
    "complete": true,
    "isOption": false,
    "isQuoted": true,
    "token": "value",
    "tokenLength": 7,
  },
]
`;

exports[`parseCommand [zsh] cmd --flag=value 1`] = `
[
  {
    "complete": true,
    "isOption": false,
    "token": "cmd",
    "tokenLength": 3,
  },
  {
    "complete": true,
    "isOption": true,
    "token": "--flag",
    "tokenLength": 6,
  },
  {
    "complete": false,
    "isOption": false,
    "token": "value",
    "tokenLength": 5,
  },
]
`;

exports[`parseCommand [zsh] cmd -f  1`] = `
[
  {
    "complete": true,
    "isOption": false,
    "token": "cmd",
    "tokenLength": 3,
  },
  {
    "complete": true,
    "isOption": true,
    "token": "-f",
    "tokenLength": 2,
  },
]
`;

exports[`parseCommand [zsh] cmd -f 'value'  1`] = `
[
  {
    "complete": true,
    "isOption": false,
    "token": "cmd",
    "tokenLength": 3,
  },
  {
    "complete": true,
    "isOption": true,
    "token": "-f",
    "tokenLength": 2,
  },
  {
    "complete": true,
    "isOption": false,
    "isQuoted": true,
    "token": "value",
    "tokenLength": 7,
  },
]
`;

exports[`parseCommand [zsh] cmd -f 1`] = `
[
  {
    "complete": true,
    "isOption": false,
    "token": "cmd",
    "tokenLength": 3,
  },
  {
    "complete": false,
    "isOption": true,
    "token": "-f",
    "tokenLength": 2,
  },
]
`;

exports[`parseCommand [zsh] cmd -f 2`] = `
[
  {
    "complete": true,
    "isOption": false,
    "token": "cmd",
    "tokenLength": 3,
  },
  {
    "complete": false,
    "isOption": true,
    "token": "-f",
    "tokenLength": 2,
  },
]
`;

exports[`parseCommand [zsh] cmd -f value  1`] = `
[
  {
    "complete": true,
    "isOption": false,
    "token": "cmd",
    "tokenLength": 3,
  },
  {
    "complete": true,
    "isOption": true,
    "token": "-f",
    "tokenLength": 2,
  },
  {
    "complete": true,
    "isOption": false,
    "token": "value",
    "tokenLength": 5,
  },
]
`;

exports[`parseCommand [zsh] cmd -f= 1`] = `
[
  {
    "complete": true,
    "isOption": false,
    "token": "cmd",
    "tokenLength": 3,
  },
  {
    "complete": true,
    "isOption": true,
    "token": "-f",
    "tokenLength": 2,
  },
]
`;

exports[`parseCommand [zsh] cmd -f="value"  1`] = `
[
  {
    "complete": true,
    "isOption": false,
    "token": "cmd",
    "tokenLength": 3,
  },
  {
    "complete": true,
    "isOption": true,
    "token": "-f",
    "tokenLength": 2,
  },
  {
    "complete": true,
    "isOption": false,
    "isQuoted": true,
    "token": "value",
    "tokenLength": 7,
  },
]
`;

exports[`parseCommand [zsh] cmd -f='' 1`] = `
[
  {
    "complete": true,
    "isOption": false,
    "token": "cmd",
    "tokenLength": 3,
  },
  {
    "complete": true,
    "isOption": true,
    "token": "-f",
    "tokenLength": 2,
  },
  {
    "complete": false,
    "isOption": false,
    "isQuoted": true,
    "token": "",
    "tokenLength": 2,
  },
]
`;

exports[`parseCommand [zsh] cmd -f='val 1`] = `
[
  {
    "complete": true,
    "isOption": false,
    "token": "cmd",
    "tokenLength": 3,
  },
  {
    "complete": true,
    "isOption": true,
    "token": "-f",
    "tokenLength": 2,
  },
  {
    "complete": false,
    "isOption": false,
    "isQuoted": true,
    "token": "val",
    "tokenLength": 4,
  },
]
`;

exports[`parseCommand [zsh] cmd -f=value  1`] = `
[
  {
    "complete": true,
    "isOption": false,
    "token": "cmd",
    "tokenLength": 3,
  },
  {
    "complete": true,
    "isOption": true,
    "token": "-f",
    "tokenLength": 2,
  },
  {
    "complete": true,
    "isOption": false,
    "token": "value",
    "tokenLength": 5,
  },
]
`;

exports[`parseCommand [zsh] cmd 1`] = `
[
  {
    "complete": false,
    "isOption": false,
    "token": "cmd",
    "tokenLength": 3,
  },
]
`;

exports[`parseCommand [zsh] cmd dir\\ 1/dir\\ 2/item1 1`] = `
[
  {
    "complete": true,
    "isOption": false,
    "token": "cmd",
    "tokenLength": 3,
  },
  {
    "complete": false,
    "isOption": false,
    "token": "dir 1/dir 2/item1",
    "tokenLength": 19,
  },
]
`;

exports[`parseCommand [zsh] cmd value  1`] = `
[
  {
    "complete": true,
    "isOption": false,
    "token": "cmd",
    "tokenLength": 3,
  },
  {
    "complete": true,
    "isOption": false,
    "token": "value",
    "tokenLength": 5,
  },
]
`;

exports[`parseCommand [zsh] cmd1 "item1"item2 "item3" 1`] = `
[
  {
    "complete": true,
    "isOption": false,
    "token": "cmd1",
    "tokenLength": 4,
  },
  {
    "complete": true,
    "isOption": false,
    "isQuoteContinued": true,
    "isQuoted": true,
    "token": "item1item2",
    "tokenLength": 12,
  },
  {
    "complete": false,
    "isOption": false,
    "isQuoted": true,
    "token": "item3",
    "tokenLength": 7,
  },
]
`;

exports[`parseCommand [zsh] cmd1 "item1"item2 1`] = `
[
  {
    "complete": true,
    "isOption": false,
    "token": "cmd1",
    "tokenLength": 4,
  },
  {
    "complete": false,
    "isOption": false,
    "isQuoteContinued": true,
    "isQuoted": true,
    "token": "item1item2",
    "tokenLength": 12,
  },
]
`;

exports[`parseCommand [zsh] cmd1 "item1"item2 item3 1`] = `
[
  {
    "complete": true,
    "isOption": false,
    "token": "cmd1",
    "tokenLength": 4,
  },
  {
    "complete": true,
    "isOption": false,
    "isQuoteContinued": true,
    "isQuoted": true,
    "token": "item1item2",
    "tokenLength": 12,
  },
  {
    "complete": false,
    "isOption": false,
    "token": "item3",
    "tokenLength": 5,
  },
]
`;

exports[`parseCommand [zsh] cmd1 | cmd2  1`] = `
[
  {
    "complete": true,
    "isOption": false,
    "token": "cmd2",
    "tokenLength": 4,
  },
]
`;

exports[`parseCommand [zsh] cmd1 | cmd2 && cmd3 ; cmd4 1`] = `
[
  {
    "complete": false,
    "isOption": false,
    "token": "cmd4",
    "tokenLength": 4,
  },
]
`;

exports[`parseCommand [zsh] cmd1 || cmd2 | cmd3 1`] = `
[
  {
    "complete": false,
    "isOption": false,
    "token": "cmd3",
    "tokenLength": 4,
  },
]
`;

exports[`parseCommand [zsh] cmd1 - 1`] = `
[
  {
    "complete": true,
    "isOption": false,
    "token": "cmd1",
    "tokenLength": 4,
  },
  {
    "complete": false,
    "isOption": true,
    "token": "-",
    "tokenLength": 1,
  },
]
`;

exports[`parseCommand [zsh] 😁 1`] = `
[
  {
    "complete": false,
    "isOption": false,
    "token": "😁",
    "tokenLength": 2,
  },
]
`;
